--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "anhskohbo/no-captcha": "^3.7",
         "bacon/bacon-qr-code": "^2.0",
         "cloudinary-labs/cloudinary-laravel": "^2.0",
         "coderatio/paystack-mirror": "^0.1.0@beta",
